# fate-matrix-backend

./: .env_example  .gitignore  README.md  alembic.ini  pyproject.toml
src/: settings.py
src/adapters/api/: app.py  schema.py
src/adapters/api/v1/fate_matrix/: _router.py  schema.py
src/app/: sentry.py  settings.py
src/app/adapters/api/: app.py
src/app/adapters/api/v1/: _router.py
src/app/adapters/api/v1/fate_matrix/: _router.py  schema.py
src/app/alembic/: env.py
src/app/core/: dto.py  utils.py
src/app/core/domain/fate_matrix/: __init__.py  dto.py  service.py
src/app/core/domain/fate_matrix/commands/: __init__.py  create_fate_matrix.py
src/app/core/template_builder/: __init__.py  builder.py  enums.py
src/app/core/template_builder/templates/: personal_fate_matrix.tpl
src/app/db/: base.py  engine.py  enums.py  mixins.py
src/app/db/models/: user.py
src/app/di/: _container.py
src/app/di/modules/: fate_matrix.py  template_builder.py
src/core/: di.py
src/core/domain/fate_matrix/: _providers.py  dto.py  service.py
src/core/domain/fate_matrix/commands/: create_fate_matrix.py
src/db/: __init__.py  base.py  dependencies.py
src/lib/: di.py
tests/: abc_.py  conftest.py
tests/adapters/api/: test_healthcheck.py
tests/core/fate_matrix/: conftest.py  test_calculation_service.py  test_create_fate_matrix_command.py
tests/plugins/: db.py
